<resources>
    <string name="app_name">Mini Promoter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mini_promoter">Mini Promoter</string>
    <string name="campain_name">Campain name</string>
    <string name="campain_message">Campain message</string>
    <string name="add_campain">Add Campain</string>
    <string name="enter_campain_name">Please enter the campain name</string>
    <string name="enter_campain_message">Please  enter the campain message</string>
    <string name="enter_product_name">Please  enter the product name</string>
    <string name="add_product">Add product</string>
    <string name="subscribers">Subscribers</string>
    <string name="expire_message">Expire message</string>
    <string name="keywords">Keywords</string>
    <string name="message2">Message: </string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="tittle">Tittle: </string>
    <string name="message">Message</string>
</resources>
